<resources>
    <string name="app_name">Lovag vs Zombi</string>
    <string name="zombie_hit">Ütés a zombival</string>
    <string name="knight_hit">Ütés a lovaggal</string>
    <string name="successfull_hit">Sikeres ütés!</string>
    <string name="notsuccessfull_hit">Blokkolva!</string>
    <string name="start_fight">Kezd el a harcot!</string>
    <string name="successfull_block">Sikeres blokkolás!</string>
    <string name="critical_hit">Kritikus ütés!</string>


    <string name="knight_skill1">Dupla ütés</string>
    <string name="knight_skill2">Kritikus ütés</string>
    <string name="knight_skill3">Precíz ütés</string>
    <string name="knight_skill4">Gyógyító ütés</string>

    <string name="skill_double_hit">Dupla ütés</string>
    <string name="skill_critical_hit">Kritikus ütés</string>
    <string name="skill_precision_hit">Precíz ütés</string>
    <string name="skill_life_steal_hit">Gyógyító ütés</string>


    <string name="knight_name_label">Lovag</string>
    <string name="enemy_name_label">Zombi</string>
    <string name="level_label">Szint</string>
    <string name="health_label">Élet</string>
    <string name="experience_label">Tapasztalat</string>
    <string name="damage_label">Sebzés</string>
    <string name="critical_hit_chance_label">Kritikus ütés</string>
    <string name="block_chance_label">Blokkolás</string>
    <string name="combat_section">Harcmező</string>
    <string name="skill_bar">Képességek</string>
    <string name="life_steal_label">Életerő lopás</string>
    <string name="item_price_label">Ár</string>

    <string name="percentage_value">%1$d%%</string>
    <string name="empty_slot">Üres hely</string>

    <string name="item_details">Tulajdonságok</string>
    <string name="item_sell">Eladás</string>
    <string name="item_equip">Viselés</string>
    <string name="item_unequip">Levétel</string>

    <string name="combat_toolbar_title">@string/combat_section</string>
    <string name="inventory_toolbar_title">Táska</string>
    <string name="item_details_toolbar_title">Tulajdonságok</string>
    <string name="skills_toolbar_title">Képességek</string>

    <string name="skills_save">Mentés</string>

</resources>